export const screen = {
  login: {
    loginButton: 'login_loginButton',
    passwordForgotButton: 'login_forgotPassword',
    // trackGuest: 'track_load_as_guest',
    // PASSWORD = '//XCUIElementTypeOther[@name=\'login_password\']';
    // enterEmail: '//XCUIElementTypeOther[@name=\'Email address\']',
    enterEmail: 'Email address',
    enterEmailCaps: 'EMAIL ADDRESS',

    requestButton: 'forgotPassword_requestButton',
  },
  home: {
    homeButton: 'bottomnav_Home',
    ShowLoadsButton: 'showSpecificLoads',
  },
  offers: {
    offersButton: 'bottomnav_Offers',
    activeOffersTab: '//XCUIElementTypeButton[@name=\'Active Offers\']',
    activeTabShowOfferButton: 'showOfferButton',
    inactiveOffersTab: '//XCUIElementTypeButton[@name=\'Inactive Offers\']',
  },
  findLoads: {
    findloadsButton: 'bottomnav_FindLoads',
  },
  myLoads: {
    myLoadsButton: 'bottomnav_MyLoads',
    acceptanceTab: '//XCUIElementTypeButton[@name=\'Acceptance Needed\']',
    driverAssignmentTab: '//XCUIElementTypeButton[@name=\'Driver Assignment\']',
    inTransitTab: '//XCUIElementTypeButton[@name=\'In Transit\']',
    completedTab: '//XCUIElementTypeButton[@name=\'Completed\']',
    inTransitShwLdButton: 'showLoadButton',
  },
  perks: {
    perksButton: 'bottomnav_Perks',
  },
};

export const bottomNav = {
  home: 'bottomnav_Home',
  offers: 'bottomnav_Offers',
  findLoads: 'bottomnav_FindLoads',
  myLoads: 'bottomnav_MyLoads',
  perks: 'bottomnav_Perks',
};

export const header = {
  backButton: 'header_backButton',
};


// export const TRACK_GUEST = '/XCUIElementTypeOther[@name=\'Track Load As Guest\']';
export const PASSWORD_FORGOT_BUTTON = 'login_forgotPassword';

